--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: cimg/node:14.17.1
+      - image: cimg/node:21.4.0
     steps:
       - checkout
       - restore_cache:
@@ -16,7 +16,7 @@ jobs:
           paths:
             - ./node_modules
       - run:
-          name: Javascript IIFE test
+          name: JavaScript IIFE test
           command: npm test
       - store_artifacts:
-          path: ~/iife-javascript
+          path: ~/iife-JavaScript
